--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</header>
 	
 		<table border="0" width="100%">
-			<td><img src="DESTAQUES.png"></td>
+			<td><img src="DESTAQUES.PNG"></td>
 			<td></td>
 		<tr>
 			<td rowspan="2" align="center"><img src="img6.png" width="100%" height="100%"</td>
